--- a/monsterFighterGameOOP/monsterFighterGameOOP.vcxproj
+++ b/monsterFighterGameOOP/monsterFighterGameOOP.vcxproj
@@ -149,6 +149,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="gameFunctions.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
